Verion 0.9.42-devcvs (?? ??? ????)
  - Fixed bug 756177, 644299: public access got "+" icon in month view
    when viewing non-user calendar in month view.
  - Fixed some of the undefined variable warnings
  - Fixed bug 755709: parse error in search_handler.php
Verion 0.9.41 (16 Jun 2002)
  - Fixed bug 755178: "Public User" not being translated
  - Fixed bug 652871: Don't display assistant link in trailer if read-only
  - Fixed bug 680626: Fix attempt too insert duplicate entries in the
    database.
  - Fixed bug 715823: email notification on repeating events was using
    original event date rather than date for notification
  - Fixed bug 727616: conflict not working on repeating events
  - Fixed bug 650045: add missing '/' is server URL
  - Fixed bug 664641: not using $login_url in connect.php
  - Fixed bug 677677: year.php used "?" rather than "?php" after "<"
  - Fixed bug 705756: conflicts page not showing user name
  - Fixed bug 732729: public access link on login.php ignores preference
    for default view
  - Fixed bugs 753159, 684230: bug in site extras in edit_entry.php -
    was using $i for inner and outer loop.
  - Fixed bug 753107: Not handling rejected or deleted events properly
  - Fixed bug 739309: "All Day Event" not saved properly
  - Altered webcal_user_pref and webcal_config tables to allow
    values of 100 chars instead of 50.
  - Fixed bug 732887: extra CR chars in external users
  - Fixed bug 736411: Array elements disappear if using + to concat
  - Added patch 673899: Viewing rights set wrong for view_entry.php
  - Added patch 736202: Improved iCalendar export
  - Fixed bug 732885: Bad SQL in send_reminders.php
  - Fixed bug 739010: error creating postgres tables
  - Fixed bug 740983: in admin.php, should be "false" not "$false"
  - Added patch 710867: Allow postgresql connections through unix sockets
  - Added patch 707382: Fix for Oracle - don't use 'as' in SQL.
  - Fixed description to display https links as links.